--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,14 @@ jobs:
 
       - name: List files in repository
         run: ls -alh
+
+  show-pwd:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Show present working directory
+        run: pwd
+
+  
