--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: List Repo Files
 
-on:
-  push:   # Runs on every push
+on:   # Runs on every push
   workflow_dispatch: # Allows manual trigger
 
 jobs:
@@ -30,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create a file
-        run: touch file1
+        run: touch file2
 
 
   
